[package]
name = "meilix"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
meilisearch-sdk = "0.33"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6"
