[package]
name = "meilix"
version = "0.1.0"
edition = "2021"
description = "A terminal UI to manage Meilisearch indexes"
license = "MIT"
repository = "https://github.com/johnoppenheimer/meilix"
readme = "README.md"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
meilisearch-sdk = "0.33"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
color-eyre = "0.6"
